Logo color changed, map moved to the right

--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
       <a-assets>
         <img id="partners_map" src="./imgs/partners_map.png">
       </a-assets>
-      <a-image src="#partners_map" position="0 2.5 -2.4" scale="2 2 2"></a-image>
+      <a-image src="#partners_map" position="0.85 2.5 -2.4" scale="2 2 2"></a-image>
 
       <a-entity id="size" position="6.2 1.2 -2.4"
-                text="color: black; align: left; value: MARTIANS; width: 13">
+                text="color: #2E9EC6; align: left; value: MARTIANS; width: 13">
       </a-entity>
       <a-entity id="size" position="3.75 0.8 -2.4"
                 text="color: black; align: left; value: Multi-user AR Toolbox In; width: 8">
